// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`incomplete proof of evidence GET /confirm should render the incomplete appellant proof of evidence CYA page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and reject appellant proof of evidence and witnesses</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value"><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                        target="_blank">blank copy 5.pdf</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/appellant/manage-documents/135568/?backUrl=/proof-of-evidence/appellant/incomplete/confirm">Change <span class="govuk-visually-hidden">supporting documents</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
                    <dd class="govuk-summary-list__value">Reject proof of evidence and witnesses</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/appellant">Change <span class="govuk-visually-hidden">Review decision</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Reason for rejecting the appellant proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Received after deadline</div>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/appellant/incomplete/reasons">Change <span class="govuk-visually-hidden">Incomplete reasons</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We’ll send an email to the appellant to explain why you rejected their
                proof of evidence and witnesses</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Confirm statement is incomplete</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`incomplete proof of evidence GET /confirm should render the incomplete lpa proof of evidence CYA page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and reject LPA proof of evidence and witnesses</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value"><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                        target="_blank">blank copy 5.pdf</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/lpa/manage-documents/135568/?backUrl=/proof-of-evidence/lpa/incomplete/confirm">Change <span class="govuk-visually-hidden">supporting documents</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
                    <dd class="govuk-summary-list__value">Reject proof of evidence and witnesses</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/lpa">Change <span class="govuk-visually-hidden">Review decision</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Reason for rejecting the LPA proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Received after deadline</div>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/lpa/incomplete/reasons">Change <span class="govuk-visually-hidden">Incomplete reasons</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We’ll send an email to the appellant to explain why you rejected their
                proof of evidence and witnesses</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Confirm statement is incomplete</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`incomplete proof of evidence GET /confirm should render the incomplete rule-6-party proof of evidence CYA page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and reject Test Rule 6 Party proof of evidence and witnesses</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value"><a class="govuk-link" href="/documents/4881/download/ed52cdc1-3cc2-462a-8623-c1ae256969d6/blank copy 5.pdf"
                        target="_blank">blank copy 5.pdf</a>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/rule-6-party/3670/manage-documents/135568/?backUrl=/proof-of-evidence/rule-6-party/3670/incomplete/confirm">Change <span class="govuk-visually-hidden">supporting documents</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
                    <dd class="govuk-summary-list__value">Reject proof of evidence and witnesses</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/rule-6-party/3670">Change <span class="govuk-visually-hidden">Review decision</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Reason for rejecting the Test Rule 6 Party proof of evidence and witnesses</dt>
                    <dd                     class="govuk-summary-list__value">
                        <div class="pins-show-more" data-label="Read more" data-mode="html">Received after deadline</div>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/proof-of-evidence/rule-6-party/3670/incomplete/reasons">Change <span class="govuk-visually-hidden">Incomplete reasons</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We’ll send an email to the appellant to explain why you rejected their
                proof of evidence and witnesses</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Confirm statement is incomplete</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`incomplete proof of evidence GET /reasons should render the incomplete appellant proof of evidence page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" aria-describedby="rejection-reason-hint">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why are the proof of evidence and witnesses incomplete?</h1>
                        </legend>
                        <div id="rejection-reason-hint" class="govuk-hint">Select all that apply.</div>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason" name="rejectionReason"
                                type="checkbox" value="1">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason">Received after deadline</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-2" name="rejectionReason"
                                type="checkbox" value="2">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-2">Includes personal and/or medical information</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-3" name="rejectionReason"
                                type="checkbox" value="3">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-3">Includes inflammatory content</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-4" name="rejectionReason"
                                type="checkbox" value="4">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-4">Duplicated comment</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-5" name="rejectionReason"
                                type="checkbox" value="5">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-5">Not relevant to this appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-6" name="rejectionReason"
                                type="checkbox" value="6">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-6">Contains links to web pages</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-7" name="rejectionReason"
                                type="checkbox" value="7" data-aria-controls="conditional-rejection-reason-7">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-7">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-rejection-reason-7">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="rejection-reason-7-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="rejection-reason-7-1" name="rejectionReason-7" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`incomplete proof of evidence POST /reasons should return validation error when no reason is selected 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#rejection-reason">Select why the proof of evidence and witnesses are incomplete</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" aria-describedby="rejection-reason-hint">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why are the proof of evidence and witnesses incomplete?</h1>
                        </legend>
                        <div id="rejection-reason-hint" class="govuk-hint">Select all that apply.</div>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason" name="rejectionReason"
                                type="checkbox" value="1">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason">Received after deadline</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-2" name="rejectionReason"
                                type="checkbox" value="2">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-2">Includes personal and/or medical information</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-3" name="rejectionReason"
                                type="checkbox" value="3">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-3">Includes inflammatory content</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-4" name="rejectionReason"
                                type="checkbox" value="4">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-4">Duplicated comment</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-5" name="rejectionReason"
                                type="checkbox" value="5">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-5">Not relevant to this appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-6" name="rejectionReason"
                                type="checkbox" value="6">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-6">Contains links to web pages</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-7" name="rejectionReason"
                                type="checkbox" value="7" data-aria-controls="conditional-rejection-reason-7">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-7">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-rejection-reason-7">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="rejection-reason-7-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="rejection-reason-7-1" name="rejectionReason-7" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
